--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 /******* Bootstrap Theming ********/
 
-$primary: #48ffd1;
+$primary: #7287ef;
 $secondary: #6c757d;
 $light: #ffffff;
 $dark: #343a40;
